--- a/index.html
+++ b/index.html
@@ -130,9 +130,16 @@
                   <h3>Agiletech</h3>
                   <p class="info">Manglore <span>&bull;</span> <em class="date">May 2021 - Jul 2021</em></p>
                   <p>
-                  It was a three months internship program where I was trained in JAVA, PHP, HTML,
-CSS, JS and henceforth given a project of my own choice to be completed within 
-deadline.</p>
+                  Problem Statement: <br>
+                  In the traditional method citizen must visit the local panchayath office to lodge a complaint which was a little time consuming and
+a lenghty process due to which most of the citizens lost thier intrest in raising a complaint. <br>
+Solution: <br>
+A citizen uses a mobile app to raise complaints to the panchayath. The app allows for direct photo of the problem and accurate
+location, reducing disadvantages of traditional method. panchayath will be having a web application where they can view the
+complaint and update the status.
+Tools & Technologies: NetBeans, Tomcat, MySQL Administrator & query brwoser, Java, SQL.
+
+                  </p>
                </div>         
             </div> <!-- item end -->
          </div> <!-- main-col end -->
