--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <h3>Agiletech</h3>
                   <p class="info">Manglore <span>&bull;</span> <em class="date">May 2021 - Jul 2021</em></p>
                   <p>
-                  Problem Statement: <br>
+                 <b> Problem Statement: <b> <br>
                   In the traditional method citizen must visit the local panchayath office to lodge a complaint which was a little time consuming and
 a lenghty process due to which most of the citizens lost thier intrest in raising a complaint. <br>
 Solution: <br>
