--- a/index.html
+++ b/index.html
@@ -151,10 +151,14 @@ deadline.
                   <h3>Voice of Citizen</h3>
                   <p class="info">Developer <span>&bull;</span> <em class="date">May 2021 - Sept 2021</em></p>
                   <p>
-                  This Android/web application can be used to raise the complaint about anything of 
-your surroundings such as street light, water supply, road etc to the Grama 
-Panchayath. Raised complaint will be forwarded to Grama panchayath and user can 
-get the status of their complaint through their smartphone.
+                  <b> Problem Statement: </b> <br>
+                  In the traditional method citizen must visit the local panchayath office to lodge a complaint which was a little time consuming and
+a lenghty process due to which most of the citizens lost thier intrest in raising a complaint. <br>
+<b>Solution: </b><br>
+A citizen uses a mobile app to raise complaints to the panchayath. The app allows for direct photo of the problem and accurate 
+location, reducing disadvantages of traditional method. panchayath will be having a web application where they can view the
+complaint and update the status. <br>
+<b>Tools & Technologies: </b><br>NetBeans, Tomcat, MySQL Administrator & query brwoser, Java, SQL.
                   </p>
                </div>
             </div> <!-- item end -->
