--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@ deadline.
                   </p>
                </div>         
             </div> <!-- item end -->
+            <div class="row item">
+               <div class="twelve columns">
+                  <h3>Agiletech</h3>
+                  <p class="info">Manglore <span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
+                  <p>
+                 It was a winter internship program where I got advance Java knowledge required for building my career as a developer.
+
+                  </p>
+               </div>         
+            </div> <!-- item end -->
          </div> <!-- main-col end -->
       </div> <!-- End Work -->           
       <!-- Work
@@ -146,6 +156,23 @@ deadline.
             <h1><span>Work</span></h1>
          </div>
          <div class="nine columns main-col">
+            <div class="row item">
+               <div class="twelve columns">
+                  <h3>Raspberry pi as NAS server</h3>
+                  <p class="info">Developer<span>&bull;</span> <em class="date">Feb 2023 - Apr 2023</em></p>
+                  <p>
+                  <b>Problem statement:</b> <br>Servers are typically expensive and power-hungry, making them a poor choice for budget-conscious users and small businesses.Raspberry Pis, on the other hand, are inexpensive and low-power, making them ideal for building a NAS server. However, setting upa NAS server on a Raspberry Pi can be complex and time-consuming.<br><b>Solution:</b><br>This project aims to address these challenges by designing and implementing a NAS server on a Raspberry Pi that is low-cost,energy-efficient, easy to set up, and reliable. The server will be able to store and share files over a network, support multipleconcurrent users, and provide reliable performance along with a failsafe sceondary drive where data will be synced from primarydrive in the given internal. This project will allow more users to take advantage from the benefits of a NAS server, without havingto spend a lot of money or invest a lot of time in setting it up.<br><b>Tools & Technologies:</b><br> Telnet puTTY, Pi imager, Shell Scripts.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+            <h3>Raspberry pi as NAS server</h3>
+                  <p class="info">Developer<span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
+                  <p>
+                  <b>Problem statement:</b> <br>Existing authenticated encryption (AE) schemes with keyword search (KWS) require a single server to store the encrypted dataand perform the KWS queries. This can be a vulnerability and bottleneck for large datasets, as the single server can becomeoverloaded.<br><b>Solution:</b><br>Cipher Cloud aims to address this challenge by designing and implementing a dual server AE with KWS scheme that distributesthe workload between two servers. This will provide increased performance for keyword search and reduce reliance on a singleserver with a better security.
+<br><b>Tools & Technologies:</b><br> NetBeans, Tomcat, MySQL Administrator & query brwoser, Java, SQL.
+                  </p>
+               </div>
+            </div> <!-- item end -->
             <div class="row item">
               <div class="twelve columns">
                   <h3>Voice of Citizen</h3>
@@ -162,16 +189,7 @@ complaint and update the status. <br>
                   </p>
                </div>
             </div> <!-- item end -->
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>Campus recruitment program</h3>
-                  <p class="info">Developer<span>&bull;</span> <em class="date">Apr 2020 - Nov 2020</em></p>
-                  <p>
-                  It is a web based application which serves the college students for recruitment in 
-different companies which have arrived to college for hiring.
-                  </p>
-               </div>
-            </div> <!-- item end -->
+            
          </div> <!-- main-col end -->
       </div> <!-- End Work -->
       <!-- Skills
@@ -289,7 +307,7 @@ different companies which have arrived to college for hiring.
 						   <span>+917899574383</span>
 					   </p>
 				   </div>
-               <div class="widget widget_tweets">
+               <!--<div class="widget widget_tweets">
                   <h4 class="widget-title">Latest Tweets</h4>
                   <ul id="twitter">
                      <li>
@@ -307,7 +325,7 @@ different companies which have arrived to college for hiring.
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
                   </ul>
-		         </div>
+		         </div>   --->
             </aside>
       </div>
    </section> <!-- Contact Section End-->
