--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ deadline.
             </div> <!-- item end -->
             <div class="row item">
                <div class="twelve columns">
-                  <h3>Agiletech</h3>
-                  <p class="info">Manglore <span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
+                  <h3>Pie Infocomm</h3>
+                  <p class="info">Bangalore <span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
                   <p>
                  It was a winter internship program where I got advance Java knowledge required for building my career as a developer.
 
@@ -165,7 +165,7 @@ deadline.
                   </p>
                </div>
             </div> <!-- item end -->
-            <h3>Raspberry pi as NAS server</h3>
+            <h3>Cipher Cloud</h3>
                   <p class="info">Developer<span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
                   <p>
                   <b>Problem statement:</b> <br>Existing authenticated encryption (AE) schemes with keyword search (KWS) require a single server to store the encrypted dataand perform the KWS queries. This can be a vulnerability and bottleneck for large datasets, as the single server can becomeoverloaded.<br><b>Solution:</b><br>Cipher Cloud aims to address this challenge by designing and implementing a dual server AE with KWS scheme that distributesthe workload between two servers. This will provide increased performance for keyword search and reduce reliance on a singleserver with a better security.
@@ -173,8 +173,7 @@ deadline.
                   </p>
                </div>
             </div> <!-- item end -->
-            <div class="row item">
-              <div class="twelve columns">
+            
                   <h3>Voice of Citizen</h3>
                   <p class="info">Developer <span>&bull;</span> <em class="date">May 2021 - Sept 2021</em></p>
                   <p>
