--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ deadline.
                   </p>
                </div>
             </div> <!-- item end -->
+            <div class="row item">
+               <div class="twelve columns">
             <h3>Cipher Cloud</h3>
                   <p class="info">Developer<span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
                   <p>
@@ -173,7 +175,8 @@ deadline.
                   </p>
                </div>
             </div> <!-- item end -->
-            
+            <div class="row item">
+               <div class="twelve columns">
                   <h3>Voice of Citizen</h3>
                   <p class="info">Developer <span>&bull;</span> <em class="date">May 2021 - Sept 2021</em></p>
                   <p>
