--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ deadline.
                   <h3>Raspberry pi as NAS server</h3>
                   <p class="info">Developer<span>&bull;</span> <em class="date">Feb 2023 - Apr 2023</em></p>
                   <p>
-                  <b>Problem statement:</b> <br>Servers are typically expensive and power-hungry, making them a poor choice for budget-conscious users and small businesses.Raspberry Pis, on the other hand, are inexpensive and low-power, making them ideal for building a NAS server. However, setting upa NAS server on a Raspberry Pi can be complex and time-consuming.<br><b>Solution:</b><br>This project aims to address these challenges by designing and implementing a NAS server on a Raspberry Pi that is low-cost,energy-efficient, easy to set up, and reliable. The server will be able to store and share files over a network, support multipleconcurrent users, and provide reliable performance along with a failsafe sceondary drive where data will be synced from primarydrive in the given internal. This project will allow more users to take advantage from the benefits of a NAS server, without havingto spend a lot of money or invest a lot of time in setting it up.<br><b>Tools & Technologies:</b><br> Telnet puTTY, Pi imager, Shell Scripts.
+                  This project aims to address these challenges by designing and implementing a NAS server on a Raspberry Pi that is low-cost,energy-efficient, easy to set up, and reliable. The server will be able to store and share files over a network, support multipleconcurrent users, and provide reliable performance along with a failsafe sceondary drive where data will be synced from primarydrive in the given internal. This project will allow more users to take advantage from the benefits of a NAS server, without havingto spend a lot of money or invest a lot of time in setting it up.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -170,8 +170,7 @@ deadline.
             <h3>Cipher Cloud</h3>
                   <p class="info">Developer<span>&bull;</span> <em class="date">May 2023 - Aug 2023</em></p>
                   <p>
-                  <b>Problem statement:</b> <br>Existing authenticated encryption (AE) schemes with keyword search (KWS) require a single server to store the encrypted dataand perform the KWS queries. This can be a vulnerability and bottleneck for large datasets, as the single server can becomeoverloaded.<br><b>Solution:</b><br>Cipher Cloud aims to address this challenge by designing and implementing a dual server AE with KWS scheme that distributesthe workload between two servers. This will provide increased performance for keyword search and reduce reliance on a singleserver with a better security.
-<br><b>Tools & Technologies:</b><br> NetBeans, Tomcat, MySQL Administrator & query brwoser, Java, SQL.
+                  Cipher Cloud aims to address this challenge by designing and implementing a dual server AE with KWS scheme that distributesthe workload between two servers. This will provide increased performance for keyword search and reduce reliance on a singleserver with a better security.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -180,14 +179,11 @@ deadline.
                   <h3>Voice of Citizen</h3>
                   <p class="info">Developer <span>&bull;</span> <em class="date">May 2021 - Sept 2021</em></p>
                   <p>
-                  <b> Problem Statement: </b> <br>
-                  In the traditional method citizen must visit the local panchayath office to lodge a complaint which was a little time consuming and
-a lenghty process due to which most of the citizens lost thier intrest in raising a complaint. <br>
-<b>Solution: </b><br>
+                  
 A citizen uses a mobile app to raise complaints to the panchayath. The app allows for direct photo of the problem and accurate 
 location, reducing disadvantages of traditional method. panchayath will be having a web application where they can view the
 complaint and update the status. <br>
-<b>Tools & Technologies: </b><br>NetBeans, Tomcat, MySQL Administrator & query brwoser, Java, SQL.
+
                   </p>
                </div>
             </div> <!-- item end -->
