--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@ complaint and update the status. <br>
 						<li><span class="bar-expand css"></span><em>HTML</em></li>
 						<li><span class="bar-expand html5"></span><em>CSS</em></li>
                   <li><span class="bar-expand jquery"></span><em>Flutter</em></li>
+
+
+                  <li><span class="bar-expand photoshop"></span><em>Ethical Hacking</em></li>
+                  <li><span class="bar-expand illustrator"></span><em>Linux</em></li>
+                  <li><span class="bar-expand wordpress"></span><em>Java</em></li>
+                  <li><span class="bar-expand css"></span><em>HTML</em></li>
+                  <li><span class="bar-expand html5"></span><em>CSS</em></li>
+                  <li><span class="bar-expand jquery"></span><em>Flutter</em></li>
 					</ul>
 				</div><!-- end skill-bars -->
 			</div> <!-- main-col end -->
