--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                <li><a href="https://www.facebook.com/profile.php?id=100073969131342"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/BelurPrajwal?t=FJ2fXh22cm1kokh41sW0Eg&s=09"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://github.com/PrajwalBelur"><i class="fa fa-github"></i></a></li>
-               <li><a href="http://www.linkedin.com/in/prajwal-belur-2736a0112"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/prajwalbelur/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://instagram.com/_prajwal07_?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://stackoverflow.com/users/16619577/prajwalbelur"><i class="fa fa-stack-overflow"></i></a></li>
-               <li><a href="https://join.skype.com/invite/ud9hY2b6rj9y"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://join.skype.com/invite/xtP46NcVfrlZ"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
       </div>
@@ -200,20 +200,18 @@ complaint and update the status. <br>
          <div class="nine columns main-col">         
 				<div class="bars">
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Ethical Hacking</em></li>
+                  <li><span class="bar-expand wordpress"></span><em>AWS</em></li>
+				
                   <li><span class="bar-expand illustrator"></span><em>Linux</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Java</em></li>
-						<li><span class="bar-expand css"></span><em>HTML</em></li>
-						<li><span class="bar-expand html5"></span><em>CSS</em></li>
-                  <li><span class="bar-expand jquery"></span><em>Flutter</em></li>
+						<li><span class="bar-expand photoshop"></span><em>DevOps</em></li>
+						<li><span class="bar-expand css"></span><em>Java</em></li>
+						<li><span class="bar-expand html5"></span><em>HTML & CSS</em></li>
+                  <li><span class="bar-expand wordpress"></span><em>PHP</em></li>
+                  <li><span class="bar-expand jquery"></span><em>React JS</em></li>
+                  <li><span class="bar-expand jquery"></span><em>Andriod Studio</em></li>
 
 
-                  <li><span class="bar-expand photoshop"></span><em>Ethical Hacking</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Linux</em></li>
-                  <li><span class="bar-expand wordpress"></span><em>Java</em></li>
-                  <li><span class="bar-expand css"></span><em>HTML</em></li>
-                  <li><span class="bar-expand html5"></span><em>CSS</em></li>
-                  <li><span class="bar-expand jquery"></span><em>Flutter</em></li>
+                  
 					</ul>
 				</div><!-- end skill-bars -->
 			</div> <!-- main-col end -->
