--- a/index.html
+++ b/index.html
@@ -313,25 +313,25 @@ complaint and update the status. <br>
 						   <span>+917899574383</span>
 					   </p>
 				   </div>
-               <!--<div class="widget widget_tweets">
+               <div class="widget widget_tweets">
                   <h4 class="widget-title">Latest Tweets</h4>
                   <ul id="twitter">
                      <li>
                         <span>
                         my tweets
-                        <a href="#">http://t.co/CIrdIlI3</a>
+                       <a href="#">To view my other page:</a>
                         </span>
-                        <b><a href="#">2 Days Ago</a></b>
+                        <b><a href="http://prajwalbelur.rf.gd"><u>Click Here</u></a></b>  
                      </li>
-                     <li>
+               <!--      <li>
                         <span>
                         my tweets
                         <a href="#">http://t.co/CIrdxlI3</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
-                     </li>
+                     </li>  --->
                   </ul>
-		         </div>   --->
+		         </div>  
             </aside>
       </div>
    </section> <!-- Contact Section End-->
